<resources>
    <string name="app_name">ReMedication</string>
    <string name="namelblTvText">Name:</string>
    <string name="doselblTvText">Dosage:</string>
    <string name="freqblTvText">Frequency:</string>
    <string name="remlblTvText">Remaining:</string>
    <string name="startlblTvText">Start Date:</string>
    <string name="endlblTvText">End Date:</string>
    <string name="saveBtnText">Save Changes</string>
    <string name="delBtnText">Delete</string>
    <string name="homeItText">Home</string>
    <string name="medsItText">Medicines</string>
    <string name="logsItText">Logs</string>
    <string name="setsItText">Settings</string>
    <string name="dosvalTvText">%1$s %2$s</string>
    <string name="freqTvText">Selected Frequency: %1$s</string>
    <string name="addMedBtnText">Add Medicine</string>
    <string name="addImgBtnText">Add Image</string>
    <string name="edtImgBtnText">Edit Image</string>
    <string name="takeTvText">TAKE PHOTO</string>
    <string name="captureBtnText">Capture</string>
    <string name="confirmBtnText">Confirm</string>
    <string name="retakeBtnText">Retake</string>
</resources>